updated flux code